[package]
name = "hello-riscv-esp-idf"
version = "0.1.0"
authors = ["Kneelawk <kneelawk@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = "0.45.0"
log = "0.4"

rand = "0.8.5"

[build-dependencies]
embuild = "0.31.0"
