[package]
name = "hello-riscv-esp-idf"
version = "0.1.0"
authors = ["Kneelawk <kneelawk@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0"
esp-idf-hal = "0.42.5"
esp-idf-sys = { version = "0.33.7", features = ["binstart"] }
esp-idf-svc = { version = "0.47.3", features = ["experimental", "alloc"] }
log = "0.4"

rand = "0.8.5"

[build-dependencies]
embuild = "0.31.0"
